<resources>

    <string name="app_name">Location Tracker</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="pref_user_profile">Setting</string>
    <string name="pref_mobile1">Mobile No-1</string>
    <string name="pref_mobile1_sum">Enter Mobile 1</string>
    <string name="pref_mobile2">Mobile 2</string>
    <string name="pref_mobile2_sum">Set Mobile 2</string>
    <string name="pref_range">Set Range</string>
    <string name="pref_range_sum">Set Range</string>
    
    <string name="pref_longi">Home Location</string>
    <string name="pref_longi_sum">Set Home Location</string>
    
    <string name="pref_lati">Home Location</string>
    <string name="pref_lati_sum">Set Home Location</string>
</resources>